# pytd

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  pyproject.toml
src/: main.py
src/pytd/: __init__.py  globals.py  helpers.py  main.py  opers.py  parsers.py
