[project]
name = "pytd"
version = "1.0.0"
description = "A simple Python-based CLI todo list."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Polecat", email = "polecat@disroot.org" }]
keywords = ["cli", "todo"]
dependencies = [
  "tabulate>=0.9.0",
]

# [build-system]

# [project.urls]
# Repository =

[tool.black]
line-length = 88
target-version = ["py313"]

[tool.pyright]
typeCheckingMode = "strict"
reportMissingImports = false

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["E501", "F401"]
